Fix flickering on "collapse sidebar" link when hovering
Fixes #121

--- a/src/base.css
+++ b/src/base.css
@@ -514,6 +514,9 @@
 		padding: 0 1px 0;
 		margin: 0 -1px 0;
 	}
+	a#toc-toggle {
+		color: #034575;
+	}
 	a:visited {
 		border-bottom-color: #BBB;
 	}
